force-app/main/default/objects/RIM360__c/RIM360__c.object-meta.xml
<CustomObject>
    <description>Custom object to track RIM360 engagements related to opportunities.</description>
    <label>RIM360 Tracker</label>
    <nameField>
        <label>RIM360 Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RIM360 Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>