force-app/main/default/objects/RIM360__c/fields/Did_we_share_RIM360_POV__c.field-meta.xml
<CustomField>
    <fullName>Did_we_share_RIM360_POV__c</fullName>
    <label>Did we share RIM360 POV?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>