force-app/main/default/objects/RIM360__c/fields/Did_we_use_playbooks_to_challenge_them__c.field-meta.xml
<CustomField>
    <fullName>Did_we_use_playbooks_to_challenge_them__c</fullName>
    <label>Did you use the playbooks ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>