force-app/main/default/objects/RIM360__c/fields/IMDC_Owner__c.field-meta.xml
<CustomField>
    <fullName>IMDC_Owner__c</fullName>
    <formula>Target_Account__r.IMGA_Owner__r.FirstName &amp; &quot; &quot; &amp; Target_Account__r.IMGA_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IMDC Owner</label>
    <type>Text</type>
</CustomField>