force-app/main/default/objects/RIM360__c/fields/IME_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>IME_Account_Country__c</fullName>
    <description>This is a hidden formula field, used for RIM360 Tracker email tracker, to populate the account country in the email.</description>
    <formula>Target_Account__r.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>