force-app/main/default/objects/RIM360__c/fields/RIM360_Status__c.field-meta.xml
<CustomField>
    <fullName>RIM360_Status__c</fullName>
    <label>RIM360 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Targeted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Roadmap Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>