force-app/main/default/objects/RIM360__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RIM360 Trackers</relationshipLabel>
    <relationshipName>RIM360_Trackers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>