force-app/main/default/objects/RIM360__c/fields/Which_organizational_is_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Which_organizational_is_the_customer__c</fullName>
    <label>Which organizational state is the cust?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digitizer</fullName>
            </value>
            <value>
                <fullName>Unifier</fullName>
            </value>
            <value>
                <fullName>Records Reducer</fullName>
            </value>
            <value>
                <fullName>Consolidator</fullName>
            </value>
            <value>
                <fullName>Program Accelerator</fullName>
            </value>
            <value>
                <fullName>Space Maker</fullName>
            </value>
            <value>
                <fullName>Digitiser</fullName>
            </value>
            <value>
                <fullName>Information Promoter</fullName>
            </value>
            <value>
                <fullName>Space Saver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>