force-app/main/default/objects/RIM360__c/fields/Who_are_we_talking_to__c.field-meta.xml
<CustomField>
    <fullName>Who_are_we_talking_to__c</fullName>
    <label>Who are we talking to?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Compliance/Legal</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>