force-app/main/default/objects/RIM360__c/recordTypes/IME_RIM360_Tracker.recordType-meta.xml
<RecordType>
    <fullName>IME_RIM360_Tracker</fullName>
    <active>true</active>
    <label>IME RIM360 Tracker</label>
</RecordType>