force-app/main/default/objects/RIM360__c/recordTypes/NA_RIM360_Tracker.recordType-meta.xml
<RecordType>
    <fullName>NA_RIM360_Tracker</fullName>
    <active>true</active>
    <label>NA RIM360 Tracker</label>
</RecordType>